--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
+
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fortnite Item Shop</title>
+
+    <link rel="modulepreload" href="/src/main.tsx">
+    <link rel="stylesheet" href="/src/index.scss">
   </head>
   <body>
     <main class="shop"></main>
